--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 # Ignore the default SQLite database.
 /test/dummy/db/*.sqlite3
 /test/dummy/db/*.sqlite3-*
+*.sqlite3
+spec/dummy/tmp/local_secret.txt
